--- a/adavanced/AE4_YesterdayDate.html
+++ b/adavanced/AE4_YesterdayDate.html
@@ -7,7 +7,13 @@
 
 <body>
     <script>
-    
+        var input = "Feb 22, 2018";
+        function yesDay() {
+            var x = Number(input)-1
+            var output = new Date.getDate(x)
+            console.log(output)
+        }
+
     </script>
 </body>
 
