--- a/challenge/ex1.html
+++ b/challenge/ex1.html
@@ -2,7 +2,7 @@
 <html>
 
 <body>
-    <input id = "x" type="date" value=23-2-2017>
+    <input id = "x" type="date" value="23-2-2017">
     <input onclick="click()" id ="button" type="button">
     <script>
         function click(){
